# apps/user-api/src/main/java/com/rakutenmobile/userapi/user/adapter/out/persistence/UserEntity.java
@@ -1,0 +1,21 @@
+package com.rakutenmobile.userapi.user.adapter.out.persistence;
+
+import lombok.Builder;
+import lombok.Value;
+import org.springframework.data.annotation.Id;
+import org.springframework.data.relational.core.mapping.Table;
+
+import java.util.Optional;
+import java.util.UUID;
+
+@Value
+@Builder
+@Table(name = "users")
+public class UserEntity {
+    @Id
+    private java.util.UUID userId;
+    private String name;
+    private String password;
+    private java.time.OffsetDateTime createdAt;
+    private java.time.OffsetDateTime deletedAt;
+}
