# apps/user-api/src/main/java/com/rakutenmobile/userapi/user/domain/User.java
@@ -2,17 +2,15 @@ package com.rakutenmobile.userapi.user.domain;
 
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.Data;
 
 @Data
 @AllArgsConstructor(access = AccessLevel.PRIVATE)
+@Builder
 public class User {
     private java.util.UUID userId;
     private String name;
     private String password;
-
-    public static User withoutId(String name, String password) {
-        return new User(null, name, password);
-    }
-
+    private java.time.OffsetDateTime createdAt;
 }
